--- a/Instafilter/Instafilter/Info.plist
+++ b/Instafilter/Instafilter/Info.plist
@@ -46,5 +46,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>We would like to save the filtered photo</string>
 </dict>
 </plist>
