Add basic authentication

--- a/BucketList/BucketList/Info.plist
+++ b/BucketList/BucketList/Info.plist
@@ -46,5 +46,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSFaceIDUsageDescription</key>
+	<string>Unlock to see your saved data</string>
 </dict>
 </plist>
